--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>spring_sbs</groupId>
   <artifactId>proj</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <name>proj Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
