--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,11 @@
       <artifactId>log4j-core</artifactId>
       <version>2.6.1</version>
     </dependency>
+    <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.9.8</version>
+    </dependency>
 
   </dependencies>
 
