--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,11 @@
           <artifactId>jackson-databind</artifactId>
           <version>2.11.2</version>
       </dependency>
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-speech</artifactId>
+      <version>2.1.2</version>
+    </dependency>
 
 
   </dependencies>
